another small fix

--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -385,7 +385,7 @@
       }
 
       .key--w7 {
-        width: 7.3em !important;
+        width: 7.2em !important;
       }
 
       .key--space {
@@ -394,7 +394,7 @@
 
       .key--double > * {
         padding-top: 0.1em;
-        font-size: 11px;
+        font-size: 0.8em;
       }
 
       .key--letter {
@@ -775,7 +775,7 @@
             <div>9</div>
             <div>PgUp</div>
             </div>
-            <div class="key--letter key" data-key="--kp-plus" style="height: 90px;">
+            <div class="key--letter key" data-key="--kp-plus" style="height: 6.4em;">
               <span>+</span>
             </div>
         </div>
@@ -800,7 +800,7 @@
             <div>"</div>
             <div>'</div>
             </div>
-            <div class="key--bottom-right key--word key--w5 key" style="font-size: 1em" data-key="--return">
+            <div class="key--bottom-right key--word key--w5 key" data-key="--return">
             <span>&crarr;</span>
             </div>
             <div class="small-space"></div>
@@ -919,7 +919,7 @@
             <div>.</div>
             <div>Del</div>
             </div>
-            <div class="key--double key" data-key="--kp-return" style="height: 90px; margin-top: -44px !important;">
+            <div class="key--double key" data-key="--kp-return" style="height: 6.4em; margin-top: -3.2em !important;">
               <span>Return</span>
             </div>
         </div>
