--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -892,7 +892,7 @@
             <div class="key--bottom-left key--word key--w3 key" data-key="--right-alt">
             <span>Alt</span>
             </div>
-            <div class="key--bottom-left key--word key--w1 key" data-key="--kp-compose">
+            <div class="key--bottom-left key--word key--w1 key" data-key="--app">
               <div class="box">&nbsp;</div>
             </div>
         <div class="key--bottom-left key--word key--w4 key" data-key="--right-ctrl">
