--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -372,7 +372,7 @@
       }
 
       .key--w4 {
-        width: 4.6em !important;
+        width: 4.5em !important;
       }
 
       .key--w5 {
@@ -454,16 +454,17 @@
 
       .square {
         background: #eee !important;
-        width: 4px;
-        height: 4px;
-        margin-left: 1px;
-        margin-bottom: 1px;
+        width: 0.5em;
+        height: 0.5em;
+        margin-left: 0.1em;
+        margin-bottom: 0.1em;
       }
 
       .box {
-        width: 5px;
-        height: 5px;
-        border: 1px solid white;
+        width: 1em;
+        height: 0.1em;
+        border: 0.1em solid white;
+        margin: 0.1em;
       }
 
       .hiden {
@@ -893,7 +894,11 @@
             <span>Alt</span>
             </div>
             <div class="key--bottom-left key--word key--w1 key" data-key="--app">
-              <div class="box">&nbsp;</div>
+              <div>
+                <div class="box">&nbsp;</div>
+                <div class="box">&nbsp;</div>
+                <div class="box">&nbsp;</div>
+              </div>
             </div>
         <div class="key--bottom-left key--word key--w4 key" data-key="--right-ctrl">
             <span>Ctrl</span>
