fix error on capslock

--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -788,7 +788,7 @@
             </div>
         </div>
         <div class="keyboard__row">
-            <div class="key--bottom-left key--word key--w5 key" data-key="-caps-lock">
+            <div class="key--bottom-left key--word key--w5 key" data-key="-capslock">
             <span>CapsLk</span>
             </div>
             <div class="key--letter key" data-key="-a">A</div>
@@ -830,7 +830,7 @@
             <div class="key-space"></div>
         </div>
         <div class="keyboard__row">
-            <div class="key--bottom-left key--word key--w7 key" data-key="-left-shift">
+            <div class="key--bottom-left key--word key--w7 key" data-key="-leftshift">
             <span>Shift</span>
             </div>
             <div class="key--letter key" data-key="-z">Z</div>
@@ -852,7 +852,7 @@
             <div>?</div>
             <div>/</div>
             </div>
-            <div class="key--bottom-right key--word key--w7 key" data-key="-right-shift">
+            <div class="key--bottom-right key--word key--w7 key" data-key="-rightshift">
             <span>Shift</span>
             </div>
             <div class="small-space"></div>
@@ -877,10 +877,10 @@
             <div class="key-space"></div>
         </div>
         <div class="keyboard__row">
-            <div class="key--bottom-left key--word key--w4 key" data-key="-left-ctrl">
+            <div class="key--bottom-left key--word key--w4 key" data-key="-leftctrl">
             <span>Ctrl</span>
             </div>
-            <div class="key--bottom-left key--word key" data-key="-left-meta">
+            <div class="key--bottom-left key--word key" data-key="-leftmeta">
                 <div>
                     <div style="display: flex;">
                         <div class="square">&nbsp;</div>
@@ -892,13 +892,13 @@
                     </div>
                 </div>
             </div>
-            <div class="key--bottom-right key--word key--w3 key" data-key="-left-alt">
+            <div class="key--bottom-right key--word key--w3 key" data-key="-leftalt">
             <span>Alt</span>
             </div>
             <div class="key--double key--right key--space key" data-key="-spacebar">
             &nbsp;
             </div>
-            <div class="key--bottom-left key--word key--w3 key" data-key="-right-alt">
+            <div class="key--bottom-left key--word key--w3 key" data-key="-rightalt">
             <span>Alt</span>
             </div>
             <div class="key--bottom-left key--word key--w1 key" data-key="-app">
@@ -908,7 +908,7 @@
                 <div class="box">&nbsp;</div>
               </div>
             </div>
-        <div class="key--bottom-left key--word key--w4 key" data-key="-right-ctrl">
+        <div class="key--bottom-left key--word key--w4 key" data-key="-rightctrl">
             <span>Ctrl</span>
             </div>
             <div class="small-space"></div>
